unpackaged/main/default/objects/project_cloud__Agenda_Item__c/project_cloud__Agenda_Item__c.object-meta.xml
<CustomObject>
    <label>Agenda Item</label>
    <nameField>
        <label>Agenda Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>