unpackaged/main/default/objects/project_cloud__Agenda_Item__c/fields/project_cloud__Action_Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Action_Status__c</fullName>
    <formula>IF( 
ISBLANK(project_cloud__Last_Open_Action__c), 
&#39;Complete&#39;, 
IF(project_cloud__Last_Open_Action__c &gt; TODAY(), &#39;In Progress&#39;, &#39;Late&#39;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Status</label>
    <type>Text</type>
</CustomField>