unpackaged/main/default/objects/project_cloud__Agenda_Item__c/fields/project_cloud__Coaching_Notes__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Coaching_Notes__c</fullName>
    <inlineHelpText>This field allows users to add coaching notes to the agenda items.</inlineHelpText>
    <label>Coaching Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>