unpackaged/main/default/objects/project_cloud__Agenda_Item__c/fields/project_cloud__Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Internal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, this Agenda Item is not visible to external users.</inlineHelpText>
    <label>Internal Only</label>
    <type>Checkbox</type>
</CustomField>