unpackaged/main/default/objects/project_cloud__Agenda_Item__c/fields/project_cloud__Last_Open_Action__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Last_Open_Action__c</fullName>
    <label>Last Open Action</label>
    <type>Date</type>
</CustomField>