unpackaged/main/default/objects/project_cloud__Agenda_Item__c/fields/project_cloud__Meeting__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Meeting__c</fullName>
    <inlineHelpText>The parent Meeting of the Agenda Item</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>project_cloud__Meeting__c</referenceTo>
    <relationshipLabel>Agenda Items</relationshipLabel>
    <relationshipName>Agenda_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>