unpackaged/main/default/objects/project_cloud__Agenda_Item__c/fields/project_cloud__Position__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Position__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Determines the Agenda Item order within the Meetings interface</inlineHelpText>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>